--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,6 @@
     <string name="app_name">Renty</string>
     <string name="brand">Brand</string>
     <string name="pick_up">Pick up</string>
+    <string name="facebook_app_id">323592001591528</string>
+    <string name="fb_login_protocol_scheme">fb323592001591528</string>
 </resources>
