--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="pick_up">Pick up</string>
     <string name="facebook_app_id">323592001591528</string>
     <string name="fb_login_protocol_scheme">fb323592001591528</string>
+    <string name="title_activity_coordinator_main">coordinator_main</string>
 </resources>
